--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "type": "module",
   "homepage": "https://hidaytrahman.github.io/chepo/",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
     "phosphor-react": "^1.4.1",
