--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.13",
     "gh-pages": "^5.0.0",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.6",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
