feat(data): more data and info

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chepo",
   "private": true,
-  "version": "0.0.1",
+  "version": "1.0.0",
   "type": "module",
   "homepage": "https://hidaytrahman.github.io/chepo/",
   "scripts": {
@@ -13,10 +13,10 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.10",
-    "@heroicons/react": "^2.0.15",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
