--- a/package.json
+++ b/package.json
@@ -1,32 +1,37 @@
 {
-  "name": "chepo",
-  "private": true,
-  "version": "1.0.1",
-  "type": "module",
-  "homepage": "https://hidaytrahman.github.io/chepo/",
-  "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "tsc && vite build && vite preview"
-  },
-  "dependencies": {
-    "@headlessui/react": "^1.7.10",
-    "phosphor-react": "^1.4.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.1"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-react": "^3.1.0",
-    "autoprefixer": "^10.4.13",
-    "gh-pages": "^5.0.0",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.6",
-    "typescript": "^4.9.3",
-    "vite": "^4.1.0"
-  }
+	"name": "chepo",
+	"private": true,
+	"version": "1.2.0",
+	"type": "module",
+	"author": {
+		"name": "Hidayt Rahman",
+		"email": "hidayt@gmail.com",
+		"url": "https://hidaytrahman.github.io/"
+	},
+	"homepage": "https://hidaytrahman.github.io/chepo/",
+	"scripts": {
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d dist",
+		"dev": "vite",
+		"build": "tsc && vite build",
+		"preview": "tsc && vite build && vite preview"
+	},
+	"dependencies": {
+		"@headlessui/react": "^1.7.10",
+		"phosphor-react": "^1.4.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.8.1"
+	},
+	"devDependencies": {
+		"@types/react": "^18.0.27",
+		"@types/react-dom": "^18.0.10",
+		"@vitejs/plugin-react": "^3.1.0",
+		"autoprefixer": "^10.4.13",
+		"gh-pages": "^5.0.0",
+		"postcss": "^8.4.21",
+		"tailwindcss": "^3.2.6",
+		"typescript": "^4.9.3",
+		"vite": "^4.1.0"
+	}
 }
