--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "chepo",
 	"private": true,
-	"version": "1.2.1",
+	"version": "1.3.0",
 	"type": "module",
 	"author": {
 		"name": "Hidayt Rahman",
@@ -21,11 +21,13 @@
 		"phosphor-react": "^1.4.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-highlight": "^0.15.0",
 		"react-router-dom": "^6.8.1"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.27",
 		"@types/react-dom": "^18.0.10",
+		"@types/react-highlight": "^0.12.8",
 		"@vitejs/plugin-react": "^3.1.0",
 		"autoprefixer": "^10.4.13",
 		"gh-pages": "^5.0.0",
