--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
 	},
 	"dependencies": {
 		"@headlessui/react": "^1.7.10",
+		"es-toolkit": "^1.24.0",
+		"mui": "^0.0.1",
 		"phosphor-react": "^1.4.1",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-highlight": "^0.15.0",
-		"react-router-dom": "^6.8.1"
+		"react-router-dom": "^6.8.1",
+		"react-tabulator": "^0.21.0"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.27",
