--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "chepo",
 	"private": true,
-	"version": "1.4.0",
+	"version": "1.5.0",
 	"type": "module",
 	"author": {
 		"name": "Hidayt Rahman",
@@ -28,14 +28,26 @@
 		"react-router-dom": "^6.8.1"
 	},
 	"devDependencies": {
+		"@testing-library/dom": "^10.4.0",
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/react": "^16.3.0",
+		"@types/jest": "^29.5.14",
+		"@types/jsdom": "^21.1.7",
 		"@types/react": "^18.0.27",
 		"@types/react-dom": "^18.0.10",
 		"@types/react-highlight": "^0.12.8",
 		"@vitejs/plugin-react": "^3.1.0",
 		"autoprefixer": "^10.4.13",
+		"babel-jest": "^29.7.0",
 		"gh-pages": "^5.0.0",
+		"identity-obj-proxy": "^3.0.0",
+		"jest": "^29.7.0",
+		"jest-css-modules-transform": "^4.4.2",
+		"jest-environment-jsdom": "^29.7.0",
+		"jsdom": "^26.1.0",
 		"postcss": "^8.4.21",
 		"tailwindcss": "^3.2.6",
+		"ts-jest": "^29.3.2",
 		"typescript": "^4.9.3",
 		"vite": "^4.1.0"
 	}
