--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"jest-environment-jsdom": "^29.7.0",
 		"jsdom": "^26.1.0",
 		"postcss": "^8.4.21",
+		"sonar-scanner": "^3.1.0",
 		"tailwindcss": "^3.2.6",
 		"ts-jest": "^29.3.2",
 		"typescript": "^4.9.3",
