--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "chepo",
 	"private": true,
-	"version": "1.5.0",
+	"version": "1.5.1",
 	"type": "module",
 	"author": {
 		"name": "Hidayt Rahman",
@@ -14,7 +14,8 @@
 		"deploy": "gh-pages -d dist",
 		"dev": "vite",
 		"build": "tsc && vite build",
-		"preview": "tsc && vite build && vite preview"
+		"preview": "tsc && vite build && vite preview",
+		"test:coverage": "jest --coverage"
 	},
 	"dependencies": {
 		"@emotion/react": "^11.14.0",
