fix organization name

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 # Required metadata
 sonar.projectKey=hidaytrahman_chepo
-sonar.organization=hidaytrahman       # Only if using SonarCloud
+sonar.organization=hidaytrahman
 sonar.projectName=chepo
 sonar.projectVersion=1.0
 
