test: cover copy button component to 100%

--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 		"dev": "vite",
 		"build": "tsc && vite build",
 		"preview": "tsc && vite build && vite preview",
+		"test": "jest",
+		"test:watch": "jest --watch",
 		"test:coverage": "jest --coverage"
 	},
 	"dependencies": {
