chore: sonarqube exclude test files

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,6 +9,9 @@ sonar.sources=src
 sonar.tests=src
 sonar.test.inclusions=**/*.test.js,**/*.spec.js
 
+# Exclude test files (adjust pattern as needed)
+sonar.exclusions=**/*.test.ts,**/*.test.tsx,**/__tests__/**,**/*.spec.ts,**/*.spec.tsx
+
 # Coverage (only if you're using Jest)
 sonar.javascript.lcov.reportPaths=coverage/lcov-report/lcov-report.json
 
