fix: sonarcoverage path

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,7 +13,7 @@ sonar.test.inclusions=**/*.test.js,**/*.spec.js
 sonar.exclusions=**/*.test.ts,**/*.test.tsx,**/__tests__/**,**/*.spec.ts,**/*.spec.tsx
 
 # Coverage (only if you're using Jest)
-sonar.javascript.lcov.reportPaths=coverage/lcov-report/lcov-report.json
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 # Encoding
 sonar.sourceEncoding=UTF-8
